minor(7.00-beta2): fix issue with brand size on mobile

--- a/7.0.0-beta2/styles/nav.css
+++ b/7.0.0-beta2/styles/nav.css
@@ -313,7 +313,7 @@ button.navbar__action {
 	}
 }
 
-@media (max-width: 400px) {
+@media (max-width: 768px) {
 	.navbar__brand {
 		/* display: none; Hide brand logo on small screens */
 		width: 6rem; /* Adjust width for smaller screens */
